--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 dist: xenial
 language: cpp
 compiler: clang
+
+install:
+  - pip install conan
+  - conan user
+
 before_script:
 - sudo apt update
 - sudo apt install libboost-test-dev -y
+
 script:
+- conan install .
 - cmake .
 - cmake --build .
 - cmake --build . --target test
 - cmake --build . --target package
+
 deploy:
   provider: script
   skip_cleanup: true
